<resources>
    <string name="app_name">Nao Remote Control</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As</string>
    <string name="action_load">Load</string>
    <string name="action_execute">Execute</string>
    <string name="action_joystick">Joystick</string>
    <string name="action_settings">Settings</string>
    <string name="label_dialog_execute">Execute</string>
    <string name="label_dialog_save_filename">File name</string>
    <string name="label_ipaddress">IP Address</string>
    <string name="label_progressspinner">Connecting&#8230;</string>
    <string name="label_executespinner">Running&#8230;</string>
    <string name="label_manualanimation">Manual Animation</string>
    <string name="label_automaticanimation">Automatic Animation</string>
    <string name="label_pausescript">Pause</string>
    <string name="label_runscript">Run</string>
    <string name="label_stopscript">Stop</string>
    <string name="script_action_text">Text</string>
    <string name="script_action_button">Action</string>
    <string name="action_dialog_pitch_label">Pitch</string>
    <string name="action_dialog_pose_label">Pose</string>
    <string name="action_dialog_posespeed_label">Speed</string>
    <string name="action_dialog_gesture_label">Gesture</string>
    <string name="action_dialog_gesturespeed_label">Speed</string>
    <string name="action_dialog_rate_label">Speech Rate</string>
    <string name="action_dialog_text_label">Text to Say</string>
    <string name="action_dialog_volume_label">Volume</string>
    <string name="action_dialog_walk_label">Walking</string>
    <string name="action_dialog_behavior_label">Behavior</string>
    <string name="action_dialog_gesture_concurrent_label">Concurrent Execution?</string>
    <string name="settings_contact_title">Contact</string>
    <string name="settings_about_title">About</string>
    <string name="settings_global_volume_title">Global Volume</string>
    <string name="settings_global_speed_title">Global Speed</string>
    <string name="settings_misc_title">Miscellaneous</string>
    <string name="settings_global_title">Global Robot Settings</string>
    <string name="label_temperature">Temperatures</string>
    <string name="label_direction_left">&#x2190;</string>
    <string name="label_direction_forward">&#x2191;</string>
    <string name="label_direction_right">&#x2192;</string>
    <string name="label_direction_backward">&#x2193;</string>
</resources>
